# qfn2l

./: .claudeignore  .gitignore  BUGS.md  CLAUDE.md  INVESTIGATION_MODEL_FIX_BUG.md  OBSERVATIONS.md  README.md  RECAP.md  SMT_SWITCH_PLAN.md  check_model.py  details_final.txt  pyproject.toml  run_check_sat.sh
.claude/: settings.json
bugs/: check.sh  cp_fls.sh  singleton-O0.smt2
data/true_nia/: gauss_sum.i_0.smt2  gcd_2.c_0.smt2  gcd_2.c_1.smt2  gcd_2.c_2.smt2  gcd_2_true-unreach-call_true-no-overflow.i_0.smt2  gcd_3_true-unreach-call_true-no-overflow.i_0.smt2  gcd_3_true-unreach-call_true-no-overflow.i_1.smt2  gcd_3_true-unreach-call_true-no-overflow.i_2.smt2  modulus-1.c_0.smt2  modulus-1.c_1.smt2  modulus-1.c_3.smt2  modulus-1.c_8.smt2  sum02_false-unreach-call_true-no-overflow.c_0.smt2  sum02_false-unreach-call_true-no-overflow.c_1.smt2
examples/: aproveSMT867442185995558133.smt2  aproveSMT9181010827166665933.smt2  hard-ll.c_0.smt2  hard-ll.c_1.smt2  hard-ll.c_2.smt2  hard.c_2.smt2  hard.c_3.smt2  interleave_bits.c_1.smt2  interleave_bits.c_2.smt2  interleave_bits.c_3.smt2  interleave_bits.c_4.smt2  jain_5-2.c_0.smt2  jain_7-2.c_3.smt2  test_me.sh  test_me_cpp.sh
examples/rebuttal/: ch_div1.smt2
paper/: .gitignore  abstract.txt  algorithm.tex  axioms.tex  background.tex  comparison.tex  conclusion.tex  experiments.tex  intro.tex  paper.tex  refs.bib
paper/figures/: secant.tex
paper/figures/secant/: secant.tex
paper/notes/: review.md  todo.md
paper/scripts/: cactus.py  families_table.py
paper/tables/: exp_ax.tex  families.tex  mul_ax.tex  mul_ax_basic.tex  mul_ax_secant_conds.tex  mul_ax_secant_lb.tex  mul_ax_secant_ub.tex  mul_ax_tangent.tex  results.tex
reviews/: code-review-2026-05-04.md
src/qfn2l/: converter.py  level_info.py  lia_abstraction.py  prefix.py  projections.py  pures.py  qf_solver.py  stats.py  tagged_logging.py  utils.py  visitors.py
src/qfn2l_cpp/: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CPP_VS_PYTHON.md  NOTES.md  STATUS.md  configure  converter.cpp  converter.h  level_info.cpp  level_info.h  lia_abstraction.cpp  lia_abstraction.h  main.cpp  prefix.cpp  prefix.h  projections.cpp  projections.h  pures.cpp  pures.h  qf_solver.cpp  qf_solver.h  stats.cpp  stats.h  tagged_logging.cpp  tagged_logging.h  utils.cpp  utils.h  visitors.cpp  visitors.h
src/qfn2l_cpp/doc/: model_fix.md
src/qfn2l_cpp/reviews/2026-05-12/: cpp-review-issues.md
src/qfn2l_cpp/reviews/2026-05-13/: cpp-full-review.md  smt-switch-z3-term-equality-issue.md
src/qfn2l_cpp/tests/: test_cli.sh  test_numerics.cpp  test_projections.cpp  test_pures.cpp  test_smt_switch_identity.cpp  test_solver_smoke.cpp  test_support.h  test_visitors.cpp
src/qfn2l_cpp/tests/data/: aproveSMT130911952525388558.smt2  congruence_uf.smt2  derive_c_eq_x2_unsat.smt2  derive_ms03_center_diagonal_unsat.smt2  derive_u_eq_vx_unsat.smt2  sat_mod_div.smt2  sat_two_products.smt2
src/qfn2l_cpp/tests/data/unsat/: hard-ll.c_4.smt2  log2
src/qfn2l_cppz3/: CMakeLists.txt  converter.cpp  converter.h  lia_abstraction.cpp  lia_abstraction.h  main.cpp  prefix.cpp  prefix.h  projections.cpp  projections.h  pures.cpp  pures.h  qf_solver.cpp  qf_solver.h  tagged_logging.h  utils.cpp  utils.h  visitors.cpp  visitors.h
src/qfn2l_cppz3/tests/: test_numerics.cpp  test_projections.cpp  test_pures.cpp  test_solver_smoke.cpp  test_support.h  test_visitors.cpp
testing/: check_model.py  check_model_cpp.py  div_mod_sat_0892.smt2  get_bugs.sh  minimize_smt2.py
testing/fuzzing/: compare.sh  flatten.py  lia_fuzzer.py  nia_fuzzer.py  nia_gen.py  run_cpp_fuzzer.sh  run_lia_fuzzer.sh  run_nia_fuzzer.sh  run_qfnia_fuzzer.sh
